# caroBot

./: .gitignore  CMakeLists.txt  README.md
src/: asset_path.h  board.cpp  board.h  bot.cpp  bot.h  build_run.sh  cell.h  generation.h  main.cpp  match.cpp  match.h  pattern.h  player.cpp  player.h  random.h  sfml3_test  tasks.json  tictactoe  tictactoe3
src/data/: botGeneration0.txt  botGeneration1.txt  botGeneration10.txt  botGeneration100.txt  botGeneration1000.txt  botGeneration1001.txt  botGeneration1002.txt  botGeneration1003.txt  botGeneration1004.txt  botGeneration1005.txt  botGeneration1006.txt  botGeneration1007.txt  botGeneration1009.txt  botGeneration101.txt  botGeneration1010.txt  botGeneration1011.txt  botGeneration1012.txt  botGeneration1013.txt  botGeneration1014.txt  botGeneration1015.txt  botGeneration1016.txt  botGeneration1017.txt  botGeneration1018.txt  botGeneration1019.txt  botGeneration102.txt  botGeneration1023.txt  botGeneration1024.txt  botGeneration1025.txt  botGeneration1026.txt  botGeneration1027.txt  botGeneration1028.txt  botGeneration103.txt  botGeneration1030.txt  botGeneration1031.txt  botGeneration1032.txt  botGeneration1033.txt  botGeneration1034.txt  botGeneration1035.txt  botGeneration1037.txt  botGeneration1039.txt  (+1472 more)
